# rfp.quest

./: .env.example  .gitignore  CLAUDE.md  OPTIMIZATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  RESTART_PROMPT.md  next.config.ts  package-lock.json  package.json  test-complete-intelligence-workflow.js  test-jigsawstack-intelligence.js  test-jigsawstack-sdk.js  test-jigsawstack-simple.js  vercel.json
.husky/: pre-push
agent/: .env.example  README.md  main.py  pyproject.toml  railway.toml  requirements.txt  start.sh
agent/agents/: __init__.py  compliance_agent.py  gap_analysis_agent.py  summary_agent.py  tender_analyzer.py
agent/prompts/: __init__.py  framework_templates.py
agent/tools/: __init__.py  apify_linkedin.py  companies_house.py  company_profile.py  framework_detector.py  pdf_parser.py  tavily_search.py  tender_context.py  zep_graph.py
docs/: PRD.md  plan.md  zep-integration.md
migrations/: 2026-03-14-seo-zero-clicks-fix.sql
public/: RFP Platform Quest RFP Software AI Tender Writing Site.webmanifest  RFP Platform Quest Site RFP Software AI Bid Writing Software.webmanifest  rfp-platform-quest-rfp-software-ai-tender-writing.webmanifest  site.webmanifest
railway-sync/: package-lock.json  package.json  railway.toml
scripts/: add-category-columns.ts  add-enhanced-data.ts  add-slug-column.ts  add-uk-certifications.ts  add-uk-homepage-links.ts  audit-links.ts  backfill-cpv-codes.ts  create-certification-pages.ts  create-company-profiles.ts  create-content-library-tables.ts  create-intelligence-tables.ts  create-tenders-table.ts  (+27 more)
(+248 files in other folders)
